# GranEscala_T1

./: .gitignore  README.md  pyproject.toml
artifacts/: Resúmen ejecutivo.docx  model.joblib
notebooks/: EDA.ipynb  Model.ipynb
src/: inference.py  logging_utils.py  prep.py  train.py
